2008-10-20  vadim  <vadim@vk.crocodile.org>

	* dns.cpp (list): (change in libfwbuilder) getHostByName() used to
	insert duplicate IP addresses into the list of the results. Now
	making sure ip addresses in the result are unique.

	* Compiler.cpp (Compiler::_expand_addr_recursive): (change in
	libfwbuilder) change in the algorithm used to decide which
	interfaces of the host or firewall object to use in a rule when
	this host or firewall object is found in source or
	destination. Previously, compiler would skip loopback interface
	unless user associated the rule with loopback by putting it in the
	"Interface" rule element. This made it impossible to create rules
	with address 127.0.0.1 in destination but attached to interface
	other than loopback (such rule is used for transparent proxy
	configuration). Now if user explicitly put loopback interface
	object into rule element, we always keep it. However when compiler
	expands interfaces from a host or firewall object, it will skip
	loopback as before, unless the rule is attached to loopback
	interface.

2008-10-19  vadim  <vadim@vk.crocodile.org>

	* fixed object type icon in the RuleSet and Interface object dialogs.

	* ProjectPanel.cpp (ProjectPanel::openEditor): fixed bug: object
	editor panel resized itself erratically when user switched between
	objects while editor was open. This happened on Windows and Mac OS
	X.

	* PolicyCompiler_PrintRule.cpp (PrintRule::_printTimeInterval):
	fixed bug #2180556: "broken support for the "old" time module for
	iptables". Compiler generated incorrect parameters for the "time"
	module for versions <1.4.0

2008-10-18  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (singleDstNegation::processNext): while
	processing single object negation, consider hosts and firewalls
	with one normal interface and loopback interface
	eligible (i.e. ignore loopback address even though formally such
	object has at least two ip addresses).
